--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "needle",
   "version": "1.0.0",
   "description": "",
   "main": "dist/umd/index.js",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/facing-dev/template"
+    "url": "https://github.com/facing-dev/needle"
   },
   "author": "",
   "license": "MIT",
