--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "dist/umd/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "lint": "npx eslint ./src",
     "build": "npm run build:umd && npm run build:esm",
     "watch": "npm run watch:esm",
     "watch:umd": "npx ./node_modules/.bin/tsc --project ./tsconfig/tsconfig.umd.json --watch",
     "watch:esm": "npx ./node_modules/.bin/tsc --project ./tsconfig/tsconfig.esm.json --watch",
     "build:umd": "npx ./node_modules/.bin/tsc --project ./tsconfig/tsconfig.umd.json",
-    "build:esm": "npx ./node_modules/.bin/tsc --project ./tsconfig/tsconfig.esm.json"
+    "build:esm": "npx ./node_modules/.bin/tsc --project ./tsconfig/tsconfig.esm.json",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^5.3.3"
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3",
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "typescript-eslint": "^7.0.2"
   }
 }
